# app/Http/Controllers/BillController.php
@@ -64,20 +64,12 @@ class BillController extends Controller
     }
 
     /**
-     * @OA\post(
+     * @OA\get(
      *     tags={"账单管理"},
      *     path="/api/teacher/list_bill",
      *     summary="账单列表",
-     *     @OA\RequestBody(
-     *         @OA\MediaType(
-     *             mediaType="application/json",
-     *             @OA\Schema(
-     *                 @OA\Property(property="page_size", type="integer", description="每页显示几条信息"),
-     *                 @OA\Property(property="page", type="integer", description="当前显示第几页"),
-     *                 required={"page_size","page"}
-     *             )
-     *         )
-     *     ),
+     *     @OA\Parameter(name="page_size", in="query", description="每页显示几条信息"),
+     *     @OA\Parameter(name="page", in="query", description="当前显示第几页"),
      *     @OA\Response(response=200, description="Success", @OA\JsonContent(
      *         @OA\Property(property="code", type="integer", description="返回码"),
      *         @OA\Property(property="message", type="string", description="错误信息"),
@@ -230,6 +222,60 @@ class BillController extends Controller
             $user_id = \Auth::guard("student")->user()->id;
             // 根据课程id查找当前选修该课程的学生
             $query = BillStudent::select("id", "status", "bill_id")->with('bill.course')->where("student_id", $user_id);
+            $data = $query->paginate($page_size, ['*'], 'bill_student', $current_page);
+            return $this->resJson(ErrorCode::SUCCESS, $data);
+        } catch (\Throwable $e) {
+            return $this->resJson(ErrorCode::ERROR, $e->getMessage());
+        }
+    }
+
+    /**
+     * @OA\get(
+     *     tags={"账单管理"},
+     *     path="/api/teacher/get_student_bill_status_list",
+     *     summary="学生账单支付情况列表",
+     *     @OA\Parameter(name="page_size", in="query", description="每页显示几条信息"),
+     *     @OA\Parameter(name="page", in="query", description="当前显示第几页"),
+     *     @OA\Parameter(name="bill_id", in="query", description="账单id"),
+     *     @OA\Response(response=200, description="Success", @OA\JsonContent(
+     *         @OA\Property(property="code", type="integer", description="返回码"),
+     *         @OA\Property(property="message", type="string", description="错误信息"),
+     *         @OA\Property(property="data", type="object", description="返回数据",
+     *            @OA\Property(property="meta", type="object", description="元信息",
+     *                @OA\Property(property="count", type="integer", description="当前页的项目数"),
+     *                @OA\Property(property="perPage", type="integer", description="每页显示的项目数"),
+     *                @OA\Property(property="currentPage", type="integer", description="当前页码"),
+     *                @OA\Property(property="lastPage", type="integer", description="最后一页的页码"),
+     *                @OA\Property(property="total", type="integer", description="总数")
+     *           ),
+     *           @OA\Property(property="list", type="array", description="数据列表", @OA\Items(type="object",
+     *               @OA\Property(property="bill_id", type="integer", description="账单id"),
+     *               @OA\Property(property="student_id", type="integer", description="学生id"),
+     *               @OA\Property(property="status", type="integer", description="账单状态"),
+     *               @OA\Property(property="status_description", type="string", description="账单状态-中文描述"),
+     *               @OA\Property(property="student", type="object", description="课程详情",
+     *                  @OA\Property(property="id", type="integer", description="学生id"),
+     *                  @OA\Property(property="name", type="string", description="学生姓名"),
+     *                  )
+     *             ))
+     *         ),
+     *         @OA\Property(property="timestamp", type="integer", description="服务器响应的时间戳")
+     *     ))
+     * )
+     *
+     */
+    public function getStudentBillStatusList(Request $request)
+    {
+        // 接受参数
+        $page_size = $request->input("page_size");
+        $current_page = $request->input("page");
+        $bill_id = $request->input("bill_id");
+        try {
+            $query = BillStudent::select("bill_id", "student_id", "status")->where("bill_id", $bill_id)->with([
+                'student' => function ($query) {
+                    $query->select('id', 'name');
+                },
+            ]);
             $data = $query->paginate($page_size, ['*'], 'bill_student', $current_page);
             return $this->resJson(ErrorCode::SUCCESS, $data);
         } catch (\Throwable $e) {
